<resources>
    <string name="app_name">Retrofit_practice_3</string>

    <string name="welcome_to">Welcome to </string>
    <string name="welcome_back">Welcome back</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_an_account_yet_register_now">
        Don\'t have an account yet? <font color="#FFBD2A"><big><b>Register Now</b></big></font>
    </string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registration_failed">Registration failed!</string>

    <string name="name_is_empty">Name is empty</string>
    <string name="email_should_be">Email should be like:\nabc@domain.com</string>
    <string name="password_is_empty">Password is empty</string>

    <string name="error_occurred">Error Occurred!</string>

    <!--Register-->
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_an_account">Already have an account? <font color="#FFBD2A"><big><b>Login</b></big></font></string>
    <string name="login_successful">Login Successful!</string>
    <string name="request_canceled">Request canceled</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
